tests/NormalTests/paczka1/fuzzy1/21909738.err
Error in line 4: KOP9EgQCJi 3157 44,0
Error in line 2: KOP9EgQCJi S109 63,8
Error in line 3: S157 S109 89,7
Error in line 12: 4Y9 A211 48,0
Error in line 7: KOP9EgQCJi S157 216,0
